--- a/app/src/main/res/layout/activity_lupa_password.xml
+++ b/app/src/main/res/layout/activity_lupa_password.xml
@@ -16,14 +16,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginVertical="19dp"
-        android:layout_marginStart="27dp"/>
+        android:layout_marginStart="27dp"
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@+id/tvLupaPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/dm_sans_bold"
-        android:text="Lupa Password ?"
+        android:text="@string/string_lupa_kata_sandi"
         android:textAlignment="center"
         android:textColor="@color/warna_auth_font"
         android:textSize="20sp"
@@ -40,7 +41,8 @@
         android:layout_marginVertical="71dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvLupaPassword" />
+        app:layout_constraintTop_toBottomOf="@id/tvLupaPassword"
+        tools:ignore="ContentDescription" />
     
     <TextView
         android:layout_width="match_parent"
@@ -56,7 +58,7 @@
         android:id="@+id/tvEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Email"
+        android:text="@string/string_email"
         android:layout_marginVertical="74dp"
         android:fontFamily="@font/dm_sans_medium"
         android:textSize="16sp"
@@ -69,7 +71,7 @@
         android:id="@+id/tvStarEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="*"
+        android:text="@string/string_star"
         android:layout_marginVertical="74dp"
         android:textColor="@color/warning_font"
         android:fontFamily="@font/dm_sans_medium"
@@ -82,7 +84,7 @@
         android:id="@+id/etEmail"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:hint="Email"
+        android:hint="@string/string_email"
         android:paddingStart="10dp"
         android:layout_marginEnd="24dp"
         android:layout_marginVertical="5dp"
@@ -91,7 +93,8 @@
         android:background="@drawable/transparent_bg_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvEmail"
-        android:layout_marginStart="24dp"/>
+        android:layout_marginStart="24dp"
+        tools:ignore="Autofill,RtlSymmetry,TextFields" />
 
     <TextView
         android:id="@+id/tvWarningEmail"
@@ -103,7 +106,8 @@
         android:layout_marginTop="5dp"
         android:textColor="@color/warning_font"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/etEmail"/>
+        app:layout_constraintTop_toBottomOf="@id/etEmail"
+        tools:ignore="RtlSymmetry" />
 
     <Button
         android:id="@+id/btnKirim"
@@ -114,7 +118,7 @@
         android:layout_marginVertical="55dp"
         android:paddingVertical="10dp"
         android:layout_marginHorizontal="24dp"
-        android:text="Kirim"
+        android:text="@string/string_kirim"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:enabled="false"/>
