--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -17,7 +17,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginVertical="19dp"
-        android:layout_marginStart="27dp"/>
+        android:layout_marginStart="27dp"
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@+id/tvHeadingSatu"
@@ -28,7 +29,7 @@
         android:fontFamily="@font/dm_sans_medium"
         android:paddingStart="50dp"
         android:paddingEnd="50dp"
-        android:text="Selamat Datang di TransEvilz"
+        android:text="@string/string_selamat_datang_di_transevilz"
         android:textAlignment="center"
         android:textColor="@color/warna_primary_font"
         android:textSize="24sp"
@@ -52,7 +53,7 @@
             android:layout_marginVertical="5dp"
             android:layout_marginTop="4dp"
             android:fontFamily="@font/dm_sans_medium"
-            android:text="Jika Anda ingin bergabung, lakukan register terlebih dahulu"
+            android:text="@string/string_jika_anda_ingin_bergabung_lakukan_register_terlebih_dahulu"
             android:textAlignment="center"
             android:textColor="@color/warna_secondary_font"
             android:textSize="12sp"
@@ -69,13 +70,14 @@
         android:src="@drawable/ic_register"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/lyLogin" />
+        app:layout_constraintTop_toBottomOf="@id/lyLogin"
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@+id/tvNoHp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="No Hp"
+        android:text="@string/string_nomor_handphone"
         android:fontFamily="@font/dm_sans_medium"
         android:textSize="16sp"
         android:textColor="@color/warna_auth_font"
@@ -87,7 +89,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="*"
+        android:text="@string/string_star"
         android:gravity="center"
         android:layout_marginHorizontal="2dp"
         android:textColor="@color/warning_font"
@@ -100,7 +102,7 @@
         android:layout_height="48dp"
         android:layout_marginTop="5dp"
         android:gravity="center"
-        android:text="+62"
+        android:text="@string/string_62"
         android:textSize="16sp"
         android:layout_marginStart="24dp"
         android:textColor="@color/warna_primary_font"
@@ -112,17 +114,16 @@
         android:id="@+id/etNoHp"
         android:layout_width="316dp"
         android:layout_height="48dp"
-        android:hint="Masukkan Nomor Handphone"
+        android:layout_marginVertical="5dp"
+        android:background="@drawable/transparent_bg_edittext"
+        android:fontFamily="@font/dm_sans_medium"
+        android:hint="@string/string_masukkan_nomor_handphone"
         android:inputType="number"
         android:paddingStart="10dp"
-        android:layout_marginVertical="5dp"
-        android:textSize="12sp"
-        android:textColorHint="@color/warna_auth_font"
         android:textColor="@color/warna_auth_font"
-        android:fontFamily="@font/dm_sans_medium"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="24dp"
-        android:background="@drawable/transparent_bg_edittext"
+        android:textColorHint="@color/warna_auth_font"
+        android:textSize="12sp"
+        app:layout_constraintStart_toEndOf="@+id/tvKodeNegara"
         app:layout_constraintTop_toBottomOf="@+id/tvNoHp"
         tools:ignore="RtlSymmetry" />
 
@@ -130,7 +131,7 @@
         android:id="@+id/tvWarningNohp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="No. hp minimal 10 angka"
+        android:text="@string/string_no_hp_minimal_10_angka"
         android:textColor="@color/warning_font"
         android:layout_marginStart="100dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -146,7 +147,7 @@
         android:paddingVertical="10dp"
         android:layout_marginBottom="40dp"
         android:layout_marginHorizontal="24dp"
-        android:text="Kirim"
+        android:text="@string/string_kirim"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
