--- a/app/src/main/res/layout/activity_bank_international.xml
+++ b/app/src/main/res/layout/activity_bank_international.xml
@@ -22,7 +22,7 @@
         android:id="@+id/tvTitleAkunBank"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Akun Bank"
+        android:text="@string/string_akun_bank"
         android:textSize="20sp"
         android:paddingStart="5dp"
         android:fontFamily="@font/dm_sans_bold"
@@ -31,7 +31,8 @@
         android:textColor="@color/warna_primary_font"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:ignore="RtlSymmetry" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardTotalInter"
@@ -57,13 +58,14 @@
                 android:layout_marginVertical="15dp"
                 android:layout_marginEnd="10dp"
                 app:layout_constraintTop_toTopOf="@+id/constTotalInter"
-                app:layout_constraintEnd_toStartOf="@id/tvCodeCountry"/>
+                app:layout_constraintEnd_toStartOf="@id/tvCodeCountry"
+                tools:ignore="ContentDescription" />
 
             <TextView
                 android:id="@+id/tvCodeCountry"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="IDR ke USD"
+                android:text="@string/string_idr_ke_usd"
                 android:textSize="12sp"
                 android:textColor="@color/warna_background"
                 android:fontFamily="@font/dm_sans_bold"
@@ -86,7 +88,7 @@
                 android:id="@+id/tvTotalTransaksi"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Total Transaksi"
+                android:text="@string/string_total_transaksi"
                 android:layout_marginVertical="16dp"
                 android:textSize="14sp"
                 android:textColor="@color/warna_secondary_font"
@@ -118,7 +120,7 @@
                     android:id="@+id/tvDefaultIdr"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="IDR"
+                    android:text="@string/string_idr"
                     android:layout_marginVertical="5dp"
                     android:textSize="30sp"
                     android:layout_marginStart="5dp"
@@ -134,7 +136,7 @@
         android:id="@+id/tvBank"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Pilih Bank"
+        android:text="@string/string_pilih_bank"
         android:fontFamily="@font/dm_sans_medium"
         android:textSize="16sp"
         android:textColor="@color/warna_auth_font"
@@ -147,7 +149,7 @@
         android:id="@+id/tvStarNegara"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="*"
+        android:text="@string/string_star"
         android:textColor="@color/warning_font"
         android:fontFamily="@font/dm_sans_medium"
         android:textSize="16sp"
@@ -182,7 +184,7 @@
         android:id="@+id/tvKodeSwif"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Kode Swift"
+        android:text="@string/string_kode_swift"
         android:fontFamily="@font/dm_sans_medium"
         android:textSize="16sp"
         android:textColor="@color/warna_auth_font"
@@ -195,7 +197,7 @@
         android:id="@+id/tvSwiftStar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="*"
+        android:text="@string/string_star"
         android:textColor="@color/warning_font"
         android:fontFamily="@font/dm_sans_medium"
         android:textSize="16sp"
@@ -210,7 +212,7 @@
         android:layout_height="48dp"
         android:layout_marginHorizontal="24dp"
         android:background="@drawable/transparent_bg_button"
-        android:hint="Swift"
+        android:hint="@string/string_swift"
         android:gravity="center_vertical"
         android:paddingStart="10dp"
         android:layout_marginVertical="5dp"
@@ -218,14 +220,15 @@
         android:textColor="@color/warna_grey_font"
         android:textColorHint="@color/warna_grey_font"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvSwiftStar" />
+        app:layout_constraintTop_toBottomOf="@+id/tvSwiftStar"
+        tools:ignore="RtlSymmetry" />
 
 
     <TextView
         android:id="@+id/tvRekening"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="No. Rekening"
+        android:text="@string/string_no_rekening"
         android:fontFamily="@font/dm_sans_medium"
         android:textSize="16sp"
         android:textColor="@color/warna_auth_font"
@@ -238,7 +241,7 @@
         android:id="@+id/tvStarRekening"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="*"
+        android:text="@string/string_star"
         android:textColor="@color/warning_font"
         android:fontFamily="@font/dm_sans_medium"
         android:textSize="16sp"
@@ -253,7 +256,7 @@
         android:layout_height="48dp"
         android:layout_marginHorizontal="24dp"
         android:background="@drawable/transparent_bg_button"
-        android:hint="No.Rekening"
+        android:hint="@string/string_no_rekening"
         android:paddingStart="10dp"
         android:layout_marginVertical="5dp"
         android:textSize="12sp"
@@ -266,7 +269,7 @@
         android:id="@+id/tvNamaPenerima"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Nama Penerima"
+        android:text="@string/string_nama_penerima"
         android:fontFamily="@font/dm_sans_medium"
         android:textSize="16sp"
         android:textColor="@color/warna_auth_font"
@@ -279,7 +282,7 @@
         android:id="@+id/tvStarSwift"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="*"
+        android:text="@string/string_star"
         android:textColor="@color/warning_font"
         android:fontFamily="@font/dm_sans_medium"
         android:textSize="16sp"
@@ -294,7 +297,7 @@
         android:layout_height="48dp"
         android:layout_marginHorizontal="24dp"
         android:background="@drawable/transparent_bg_button"
-        android:hint="Nama Penerima"
+        android:hint="@string/string_nama_penerima"
         android:paddingStart="10dp"
         android:inputType="number"
         android:layout_marginVertical="5dp"
@@ -323,7 +326,7 @@
             android:layout_height="55dp"
             android:fontFamily="@font/dm_sans_bold"
             android:padding="10dp"
-            android:text="Atur Ulang"
+            android:text="@string/string_atur_ulang"
             android:textAllCaps="false"
             android:textColor="@color/warning_font"
             android:textSize="16sp"
@@ -339,7 +342,7 @@
             android:layout_height="55dp"
             android:clickable="true"
             android:fontFamily="@font/dm_sans_medium"
-            android:text="Selanjutnya"
+            android:text="@string/string_selanjutnya"
             android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="@+id/constraintBtnkirim"
             app:layout_constraintBottom_toBottomOf="@+id/constraintBtnkirim"/>
@@ -350,7 +353,7 @@
             android:layout_width="150dp"
             android:layout_height="55dp"
             android:fontFamily="@font/dm_sans_medium"
-            android:text="Selanjutnya"
+            android:text="@string/string_selanjutnya"
             android:visibility="visible"
             app:layout_constraintEnd_toEndOf="@+id/constraintBtnkirim"
             app:layout_constraintBottom_toBottomOf="@+id/constraintBtnkirim"/>
