--- a/app/src/main/res/layout/activity_lokal_transfer.xml
+++ b/app/src/main/res/layout/activity_lokal_transfer.xml
@@ -26,7 +26,7 @@
             android:id="@+id/tvTitleNominal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Masukkan Nominal"
+            android:text="@string/string_masukkan_nominal"
             android:textSize="20sp"
             android:paddingStart="5dp"
             android:fontFamily="@font/dm_sans_bold"
@@ -35,13 +35,14 @@
             android:textColor="@color/warna_primary_font"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:ignore="RtlSymmetry" />
 
         <TextView
             android:id="@+id/tvMasukkanJumlah"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Masukkan Jumlah :"
+            android:text="@string/string_masukkan_jumlah"
             android:fontFamily="@font/dm_sans_medium"
             android:textSize="16sp"
             android:textColor="@color/warna_auth_font"
@@ -71,14 +72,15 @@
                 android:backgroundTint="@color/warna_primary_font"
                 app:layout_constraintTop_toTopOf="@id/constrainPilihNegara"
                 app:layout_constraintStart_toStartOf="@id/constrainPilihNegara"
-                app:layout_constraintBottom_toBottomOf="@id/constrainPilihNegara"/>
+                app:layout_constraintBottom_toBottomOf="@id/constrainPilihNegara"
+                tools:ignore="ContentDescription" />
 
 
             <TextView
                 android:id="@+id/defaultIdr"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="IDR"
+                android:text="@string/string_idr"
                 android:layout_marginStart="12dp"
                 android:textSize="16sp"
                 android:inputType="number"
@@ -88,13 +90,13 @@
                 android:background="@drawable/rounded_bg_sechond"
                 app:layout_constraintTop_toTopOf="@id/constrainPilihNegara"
                 app:layout_constraintStart_toEndOf="@id/ivAsalTf"
-                app:layout_constraintBottom_toBottomOf="@id/constrainPilihNegara"/>
+                app:layout_constraintBottom_toBottomOf="@id/constrainPilihNegara"
+                tools:ignore="TextViewEdits" />
 
             <EditText
                 android:id="@+id/etDropAsal"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:hint=""
                 android:layout_marginStart="12dp"
                 android:textSize="16sp"
                 android:inputType="number"
@@ -104,13 +106,13 @@
                 android:background="@drawable/rounded_bg_sechond"
                 app:layout_constraintTop_toTopOf="@id/constrainPilihNegara"
                 app:layout_constraintStart_toEndOf="@id/defaultIdr"
-                app:layout_constraintBottom_toBottomOf="@id/constrainPilihNegara"/>
+                app:layout_constraintBottom_toBottomOf="@id/constrainPilihNegara"
+                tools:ignore="Autofill,LabelFor" />
 
             <EditText
                 android:id="@+id/tvResultDropAsal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint=""
                 android:layout_marginStart="12dp"
                 android:textSize="16sp"
                 android:inputType="number"
@@ -121,7 +123,8 @@
                 android:background="@drawable/rounded_bg_sechond"
                 app:layout_constraintTop_toTopOf="@id/constrainPilihNegara"
                 app:layout_constraintStart_toEndOf="@id/etDropAsal"
-                app:layout_constraintBottom_toBottomOf="@id/constrainPilihNegara"/>
+                app:layout_constraintBottom_toBottomOf="@id/constrainPilihNegara"
+                tools:ignore="Autofill,LabelFor"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -129,7 +132,7 @@
             android:id="@+id/tvNilaiKurs"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Nilai Kurs Saat Ini"
+            android:text="@string/string_nilai_kurs_saat_ini"
             android:layout_marginStart="24dp"
             android:fontFamily="@font/dm_sans_medium"
             android:textSize="14sp"
@@ -142,7 +145,7 @@
             android:id="@+id/tvKurs"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="15.000 IDR"
+            android:text="@string/string_15_000_idr"
             android:layout_marginEnd="24dp"
             android:fontFamily="@font/dm_sans_medium"
             android:textSize="14sp"
@@ -154,7 +157,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Biaya Admin"
+            android:text="@string/string_biaya_admin"
             android:layout_marginStart="24dp"
             android:fontFamily="@font/dm_sans_medium"
             android:textSize="14sp"
@@ -162,10 +165,11 @@
             android:layout_marginVertical="6dp"
             app:layout_constraintTop_toBottomOf="@id/tvNilaiKurs"
             app:layout_constraintStart_toStartOf="parent"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="100.000 IDR"
+            android:text="@string/string_100_000_idr"
             android:layout_marginEnd="24dp"
             android:fontFamily="@font/dm_sans_medium"
             android:textSize="14sp"
@@ -195,7 +199,7 @@
             android:id="@+id/tvDesc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Uang akan terkirim satu hari setelah proses berhasil jika dibayar sebelum pukul 23:00"
+            android:text="@string/string_uang_akan_terkirim_satu_hari_setelah_proses_berhasil_jika_dibayar_sebelum_pukul_23_00"
             android:fontFamily="@font/dm_sans_bold"
             android:textSize="10sp"
             android:layout_marginStart="24dp"
@@ -204,13 +208,14 @@
             android:layout_marginVertical="8dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/dividerViewSatu"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:ignore="SmallSp" />
 
         <TextView
             android:id="@+id/tvDescTotal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Total Transaksi"
+            android:text="@string/string_total_transaksi"
             android:fontFamily="@font/dm_sans_bold"
             android:textSize="14sp"
             android:layout_marginStart="24dp"
@@ -225,7 +230,6 @@
             android:id="@+id/tvTotal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=""
             android:fontFamily="@font/dm_sans_bold"
             android:textSize="18sp"
             android:layout_marginStart="24dp"
@@ -240,7 +244,7 @@
             android:id="@+id/tvIdr"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=".IDR"
+            android:text="@string/string_idr"
             android:fontFamily="@font/dm_sans_bold"
             android:textSize="18sp"
             android:layout_marginEnd="24dp"
@@ -260,7 +264,7 @@
             android:visibility="visible"
             android:layout_marginStart="24dp"
             android:layout_marginEnd="24dp"
-            android:text="Selanjutnya"
+            android:text="@string/string_selanjutnya"
             app:layout_constraintTop_toBottomOf="@+id/tvTotal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -276,7 +280,7 @@
             android:layout_marginStart="24dp"
             android:visibility="invisible"
             android:layout_marginEnd="24dp"
-            android:text="Selanjutnya"
+            android:text="@string/string_selanjutnya"
             app:layout_constraintTop_toBottomOf="@+id/tvTotal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
