--- a/app/src/main/res/layout/activity_lupa_password_pw.xml
+++ b/app/src/main/res/layout/activity_lupa_password_pw.xml
@@ -16,13 +16,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginVertical="19dp"
-        android:layout_marginStart="27dp"/>
+        android:layout_marginStart="27dp"
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@+id/tvLupaPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Lupa Password ?"
+        android:text="@string/string_lupa_kata_sandi"
         android:textAlignment="center"
         android:textSize="20sp"
         android:textColor="@color/warna_auth_font"
@@ -40,7 +41,8 @@
         android:layout_marginVertical="71dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvLupaPassword" />
+        app:layout_constraintTop_toBottomOf="@id/tvLupaPassword"
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@+id/tvBuatKatasandi"
@@ -59,7 +61,7 @@
         android:id="@+id/tvKatasandiBaru"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Kata Sandi Baru"
+        android:text="@string/string_kata_sandi_baru"
         android:textSize="16sp"
         android:fontFamily="@font/dm_sans_medium"
         android:textColor="@color/warna_auth_font"
@@ -71,7 +73,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="*"
+        android:text="@string/string_star"
         android:textColor="@color/warning_font"
         app:layout_constraintStart_toEndOf="@+id/tvKatasandiBaru"
         app:layout_constraintTop_toBottomOf="@+id/tvBuatKatasandi"
@@ -93,7 +95,7 @@
             android:id="@+id/etKatasandi"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:hint="Kata sandi baru"
+            android:hint="@string/string_kata_sandi_baru"
             android:textColor="@color/warna_auth_font"
             android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789@#*&amp;"
             android:inputType="textPassword"
@@ -102,14 +104,17 @@
             android:fontFamily="@font/dm_sans_medium"
             android:textColorHint="@color/warna_auth_font"
             android:background="@drawable/transparent_bg_button"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            tools:ignore="Autofill,InefficientWeight" />
 
         <ImageButton
             android:id="@+id/ibShowKataSandiBaru"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@drawable/eye_off"
-            android:background="@drawable/transparent_bg_button"/>
+            android:background="@drawable/transparent_bg_button"
+            tools:ignore="ContentDescription" />
+
     </LinearLayout>
 
     <TextView
@@ -122,13 +127,14 @@
         android:textSize="14dp"
         android:layout_marginHorizontal="24dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/llKatasandi"/>
+        app:layout_constraintTop_toBottomOf="@+id/llKatasandi"
+        tools:ignore="SpUsage" />
 
     <TextView
         android:id="@+id/tvKonfirmasiKatasandi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Konfirmasi kata sandi baru"
+        android:text="@string/string_konfirmasi_kata_sandi_baru"
         android:textColor="@color/warna_auth_font"
         android:textSize="16sp"
         android:fontFamily="@font/dm_sans_medium"
@@ -140,7 +146,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="*"
+        android:text="@string/string_star"
         android:textColor="@color/warning_font"
         app:layout_constraintStart_toEndOf="@+id/tvKonfirmasiKatasandi"
         app:layout_constraintTop_toBottomOf="@+id/llKatasandi"
@@ -162,7 +168,7 @@
             android:id="@+id/etKonfirmasiKatasandiBaru"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:hint="Kata sandi baru"
+            android:hint="@string/string_kata_sandi_baru"
             android:textColor="@color/warna_auth_font"
             android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789@#*&amp;"
             android:inputType="textPassword"
@@ -171,14 +177,17 @@
             android:fontFamily="@font/dm_sans_medium"
             android:textColorHint="@color/warna_auth_font"
             android:background="@drawable/transparent_bg_button"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            tools:ignore="Autofill,InefficientWeight" />
 
         <ImageButton
             android:id="@+id/ibShowKonfirmasiKataSandi"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@drawable/eye_off"
-            android:background="@drawable/transparent_bg_button"/>
+            android:background="@drawable/transparent_bg_button"
+            tools:ignore="ContentDescription" />
+
     </LinearLayout>
 
 
@@ -186,7 +195,7 @@
         android:id="@+id/tvWarningKataSandiBaru"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Kata sandi harus sama"
+        android:text="@string/string_kata_sandi_harus_sama"
         android:fontFamily="@font/dm_sans"
         android:textColor="@color/warning_font"
         android:layout_marginStart="30dp"
@@ -203,7 +212,7 @@
         android:fontFamily="@font/dm_sans_medium"
         android:layout_marginVertical="40dp"
         android:layout_marginHorizontal="24dp"
-        android:text="Kirim"
+        android:text="@string/string_kirim"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:enabled="false"/>
