--- a/app/src/main/res/layout/activity_pembayaran_transfer.xml
+++ b/app/src/main/res/layout/activity_pembayaran_transfer.xml
@@ -15,15 +15,14 @@
         android:layout_marginVertical="19dp"
         android:layout_marginStart="27dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
-
-
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@+id/tvTitleAkunBank"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Akun Bank"
+        android:text="@string/string_akun_bank"
         android:textSize="20sp"
         android:paddingStart="5dp"
         android:fontFamily="@font/dm_sans_bold"
@@ -32,7 +31,8 @@
         android:textColor="@color/warna_primary_font"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:ignore="RtlSymmetry" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardTotalInter"
@@ -64,7 +64,7 @@
                 android:id="@+id/tvCodeCountry"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="IDR ke USD"
+                android:text="@string/string_idr_ke_usd"
                 android:textSize="12sp"
                 android:textColor="@color/warna_background"
                 android:fontFamily="@font/dm_sans_bold"
@@ -81,13 +81,14 @@
                 android:layout_marginVertical="15dp"
                 android:layout_marginStart="10dp"
                 app:layout_constraintTop_toTopOf="@+id/constTotalInter"
-                app:layout_constraintStart_toEndOf="@id/tvCodeCountry"/>
+                app:layout_constraintStart_toEndOf="@id/tvCodeCountry"
+                tools:ignore="ContentDescription" />
 
             <TextView
                 android:id="@+id/tvTotalTransaksi"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Total Transaksi"
+                android:text="@string/string_total_transaksi"
                 android:layout_marginVertical="16dp"
                 android:textSize="14sp"
                 android:textColor="@color/warna_secondary_font"
@@ -119,7 +120,7 @@
                     android:id="@+id/tvDefaultIdr"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="IDR"
+                    android:text="@string/string_idr"
                     android:layout_marginVertical="5dp"
                     android:textSize="30sp"
                     android:layout_marginStart="5dp"
@@ -136,7 +137,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/dm_sans_bold"
-        android:text="Metode Pembayaran"
+        android:text="@string/string_metode_pembayaran"
         android:textColor="@color/warna_auth_font"
         android:textSize="16sp"
         android:layout_marginVertical="30dp"
@@ -172,7 +173,7 @@
         android:layout_width="match_parent"
         android:layout_height="55dp"
         android:fontFamily="@font/dm_sans_medium"
-        android:text="Selanjutnya"
+        android:text="@string/string_selanjutnya"
         android:visibility="visible"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
@@ -187,7 +188,7 @@
         android:layout_width="match_parent"
         android:layout_height="55dp"
         android:fontFamily="@font/dm_sans_medium"
-        android:text="Selanjutnya"
+        android:text="@string/string_selanjutnya"
         android:visibility="invisible"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
