--- a/app/src/main/res/layout/activity_pengirim_transfer.xml
+++ b/app/src/main/res/layout/activity_pengirim_transfer.xml
@@ -16,13 +16,14 @@
       android:layout_marginVertical="19dp"
       android:layout_marginStart="27dp"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"/>
+      app:layout_constraintTop_toTopOf="parent"
+      tools:ignore="ContentDescription" />
 
   <TextView
       android:id="@+id/tvTitlePembayaran"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:text="Masukkan Pin Evilz"
+      android:text="@string/string_masukkan_pin_evilz"
       android:textSize="20sp"
       android:paddingStart="5dp"
       android:fontFamily="@font/dm_sans_bold"
@@ -31,7 +32,8 @@
       android:textColor="@color/warna_primary_font"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"/>
+      app:layout_constraintEnd_toEndOf="parent"
+      tools:ignore="RtlSymmetry" />
 
   <LinearLayout
       android:id="@+id/dummyDataStore"
@@ -48,35 +50,28 @@
     <TextView
         android:id="@+id/tvGetJenisBank"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="dummy"/>
+        android:layout_height="wrap_content"/>
     <TextView
         android:id="@+id/tvGetNamaPenerima"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="dummy"/>
+        android:layout_height="wrap_content"/>
     <TextView
         android:id="@+id/tvGetNoRekening"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="dummy"/>
+        android:layout_height="wrap_content"/>
     <TextView
         android:id="@+id/tvGetTipeTransaksi"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="dummy"/>
+        android:layout_height="wrap_content"/>
     <TextView
         android:id="@+id/tvGetTotal"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="dummy"/>
+        android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/tvGetSwift"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="dummy"/>
-
+        android:layout_height="wrap_content"/>
   </LinearLayout>
 
   <TextView
@@ -100,7 +95,7 @@
       android:id="@+id/tvLupaPin"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="Lupa Pin Evilz? ?"
+      android:text="@string/string_lupa_pin_evilz"
       android:fontFamily="@font/dm_sans_medium"
       android:textSize="16sp"
       android:textColor="@color/warna_button"
