--- a/app/src/main/res/layout/activity_pengirim_transfer_lokal.xml
+++ b/app/src/main/res/layout/activity_pengirim_transfer_lokal.xml
@@ -15,13 +15,14 @@
         android:layout_marginVertical="19dp"
         android:layout_marginStart="27dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@+id/tvTitlePembayaran"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Masukkan Pin Evilz"
+        android:text="@string/string_masukkan_pin_evilz"
         android:textSize="20sp"
         android:paddingStart="5dp"
         android:fontFamily="@font/dm_sans_bold"
@@ -30,7 +31,8 @@
         android:textColor="@color/warna_primary_font"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:ignore="RtlSymmetry" />
 
     <LinearLayout
         android:id="@+id/dummyDataStore"
@@ -38,6 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
         android:orientation="vertical"
+        android:visibility="gone"
         android:layout_marginVertical="10dp"
         app:layout_constraintTop_toBottomOf="@+id/tvTitlePembayaran"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,29 +49,28 @@
         <TextView
             android:id="@+id/tvGetJenisBank"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="dummy"/>
+            android:layout_height="wrap_content"/>
         <TextView
             android:id="@+id/tvGetNamaPenerima"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="dummy"/>
+            android:layout_height="wrap_content"/>
         <TextView
             android:id="@+id/tvGetNoRekening"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="dummy"/>
+            android:layout_height="wrap_content"/>
         <TextView
             android:id="@+id/tvGetTipeTransaksi"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="dummy"/>
+            android:layout_height="wrap_content"/>
         <TextView
             android:id="@+id/tvGetTotal"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="dummy"/>
+            android:layout_height="wrap_content"/>
 
+        <TextView
+            android:id="@+id/tvGetSwift"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
     </LinearLayout>
 
     <TextView
@@ -92,7 +94,7 @@
         android:id="@+id/tvLupaPin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Lupa Pin Evilz? ?"
+        android:text="@string/string_lupa_pin_evilz"
         android:fontFamily="@font/dm_sans_medium"
         android:textSize="16sp"
         android:textColor="@color/warna_button"
@@ -183,16 +185,16 @@
 
             <Button
                 android:id="@+id/five_btn"
+                style="@style/roundedbutton"
                 android:layout_width="wrap_content"
                 android:layout_height="90dp"
-                style="@style/roundedbutton"
                 android:background="@drawable/round_btn_bg"
+                android:text="5"
                 android:textColor="@color/warna_button"
-                app:layout_constraintTop_toTopOf="@+id/constrainSecond"
-                app:layout_constraintStart_toStartOf="@+id/constrainSecond"
-                app:layout_constraintEnd_toEndOf="@+id/constrainSecond"
                 app:layout_constraintBottom_toBottomOf="@+id/constrainSecond"
-                android:text="5" />
+                app:layout_constraintEnd_toEndOf="@+id/constrainSecond"
+                app:layout_constraintStart_toStartOf="@+id/constrainSecond"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <Button
                 android:id="@+id/four_btn"
@@ -314,11 +316,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:indeterminate="true"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="visible" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
