--- a/app/src/main/res/layout/activity_sukses_transfer_lokal.xml
+++ b/app/src/main/res/layout/activity_sukses_transfer_lokal.xml
@@ -22,7 +22,7 @@
         android:id="@+id/tvNamaUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Selamat Dinda Salsabila, Proses anda berhasil "
+        android:text="@string/string_selamat_username_proses_anda_berhasil"
         android:fontFamily="@font/dm_sans_medium"
         android:textSize="20sp"
         android:layout_marginVertical="10dp"
@@ -36,7 +36,7 @@
         android:id="@+id/tvSubTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Selesaikan Pembayaran sebelum "
+        android:text="@string/string_selesaikan_pembayaran_sebelum"
         android:fontFamily="@font/dm_sans_medium"
         android:textSize="14sp"
         android:layout_marginVertical="10dp"
@@ -50,7 +50,7 @@
         android:id="@+id/tvTimer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="23 Jam 30 Menit 10 Detik"
+        android:text="@string/string_23_jam_30_menit_10_detik"
         android:fontFamily="@font/dm_sans_medium"
         android:textSize="18sp"
         android:layout_marginVertical="10dp"
@@ -75,21 +75,22 @@
             android:layout_width="wrap_content"
             android:layout_height="33dp"
             android:gravity="center"
-            android:text="Nama Penerima"
+            android:text="@string/string_nama_penerima"
             android:fontFamily="@font/dm_sans_medium"
             android:textSize="10sp"
             android:textAlignment="center"
             android:textColor="@color/warna_secondary_font"
             app:layout_constraintTop_toTopOf="@+id/constraintNota"
             app:layout_constraintStart_toStartOf="@+id/constraintNota"
-            app:layout_constraintEnd_toEndOf="@+id/constraintNota"/>
+            app:layout_constraintEnd_toEndOf="@+id/constraintNota"
+            tools:ignore="SmallSp" />
 
         <TextView
             android:id="@+id/tvNamaPenerima"
             android:layout_width="wrap_content"
             android:layout_height="33dp"
             android:gravity="center"
-            android:text="Aurora Nugroho"
+            android:text="@string/string_nama_penerima"
             android:fontFamily="@font/dm_sans_bold"
             android:textSize="16sp"
             android:textAlignment="center"
@@ -103,21 +104,22 @@
             android:layout_width="wrap_content"
             android:layout_height="33dp"
             android:gravity="center"
-            android:text="Jenis Bank"
+            android:text="@string/string_jenis_bank"
             android:fontFamily="@font/dm_sans_medium"
             android:textSize="10sp"
             android:textAlignment="center"
             android:textColor="@color/warna_secondary_font"
             app:layout_constraintTop_toBottomOf="@+id/tvNamaPenerima"
             app:layout_constraintStart_toStartOf="@+id/constraintNota"
-            app:layout_constraintEnd_toEndOf="@+id/constraintNota"/>
+            app:layout_constraintEnd_toEndOf="@+id/constraintNota"
+            tools:ignore="SmallSp" />
 
         <TextView
             android:id="@+id/tvJenisBank"
             android:layout_width="wrap_content"
             android:layout_height="33dp"
             android:gravity="center"
-            android:text="BCC BANK"
+            android:text="@string/string_bcc_bank"
             android:fontFamily="@font/dm_sans_bold"
             android:textSize="16sp"
             android:textAlignment="center"
@@ -131,21 +133,22 @@
             android:layout_width="wrap_content"
             android:layout_height="33dp"
             android:gravity="center"
-            android:text="Tipe Transaksi"
+            android:text="@string/string_tipe_transaksi"
             android:fontFamily="@font/dm_sans_medium"
             android:textSize="10sp"
             android:textAlignment="center"
             android:textColor="@color/warna_secondary_font"
             app:layout_constraintTop_toBottomOf="@+id/tvJenisBank"
             app:layout_constraintStart_toStartOf="@+id/constraintNota"
-            app:layout_constraintEnd_toEndOf="@+id/constraintNota"/>
+            app:layout_constraintEnd_toEndOf="@+id/constraintNota"
+            tools:ignore="SmallSp" />
 
         <TextView
             android:id="@+id/tvTransaksi"
             android:layout_width="wrap_content"
             android:layout_height="33dp"
             android:gravity="center"
-            android:text="IDR KE IDR"
+            android:text="@string/string_idr_ke_usd"
             android:fontFamily="@font/dm_sans_bold"
             android:textSize="16sp"
             android:textAlignment="center"
@@ -159,21 +162,22 @@
             android:layout_width="wrap_content"
             android:layout_height="33dp"
             android:gravity="center"
-            android:text="No. Rekening"
+            android:text="@string/string_no_rekening"
             android:fontFamily="@font/dm_sans_medium"
             android:textSize="10sp"
             android:textAlignment="center"
             android:textColor="@color/warna_secondary_font"
             app:layout_constraintTop_toBottomOf="@+id/tvTransaksi"
             app:layout_constraintStart_toStartOf="@+id/constraintNota"
-            app:layout_constraintEnd_toEndOf="@+id/constraintNota"/>
+            app:layout_constraintEnd_toEndOf="@+id/constraintNota"
+            tools:ignore="SmallSp" />
 
         <TextView
             android:id="@+id/tvRekening"
             android:layout_width="wrap_content"
             android:layout_height="33dp"
             android:gravity="center"
-            android:text="1234-5678-9101-1121-314"
+            android:text="@string/string_1234_5678_9101_1121_314"
             android:fontFamily="@font/dm_sans_bold"
             android:textSize="16sp"
             android:textAlignment="center"
@@ -187,21 +191,22 @@
             android:layout_width="wrap_content"
             android:layout_height="33dp"
             android:gravity="center"
-            android:text="Virtual Akun"
+            android:text="@string/string_virtual_akun"
             android:fontFamily="@font/dm_sans_medium"
             android:textSize="10sp"
             android:textAlignment="center"
             android:textColor="@color/warna_secondary_font"
             app:layout_constraintTop_toBottomOf="@+id/tvRekening"
             app:layout_constraintStart_toStartOf="@+id/constraintNota"
-            app:layout_constraintEnd_toEndOf="@+id/constraintNota"/>
+            app:layout_constraintEnd_toEndOf="@+id/constraintNota"
+            tools:ignore="SmallSp" />
 
         <TextView
             android:id="@+id/tvVirtualAkun"
             android:layout_width="wrap_content"
             android:layout_height="33dp"
             android:gravity="center"
-            android:text="9999-5678-0033-1121-314"
+            android:text="@string/string_9999_5678_0033_1121_314"
             android:fontFamily="@font/dm_sans_bold"
             android:textSize="16sp"
             android:textAlignment="center"
@@ -217,28 +222,30 @@
             android:src="@drawable/ic_copy"
             android:layout_marginStart="5dp"
             app:layout_constraintStart_toEndOf="@+id/tvVirtualAkun"
-            app:layout_constraintTop_toBottomOf="@+id/tvTitleVirtualAkun"/>
+            app:layout_constraintTop_toBottomOf="@+id/tvTitleVirtualAkun"
+            tools:ignore="ContentDescription" />
 
         <TextView
             android:id="@+id/tvTitleTotal"
             android:layout_width="wrap_content"
             android:layout_height="33dp"
             android:gravity="center"
-            android:text="Total"
+            android:text="@string/string_total"
             android:fontFamily="@font/dm_sans_medium"
             android:textSize="10sp"
             android:textAlignment="center"
             android:textColor="@color/warna_auth_font"
             app:layout_constraintTop_toBottomOf="@+id/tvVirtualAkun"
             app:layout_constraintStart_toStartOf="@+id/constraintNota"
-            app:layout_constraintEnd_toEndOf="@+id/constraintNota"/>
+            app:layout_constraintEnd_toEndOf="@+id/constraintNota"
+            tools:ignore="SmallSp" />
 
         <TextView
             android:id="@+id/tvTotal"
             android:layout_width="wrap_content"
             android:layout_height="33dp"
             android:gravity="center"
-            android:text="1.000.000 IDR"
+            android:text="@string/string_1_000_000_idr"
             android:fontFamily="@font/dm_sans_bold"
             android:textSize="16sp"
             android:textAlignment="center"
@@ -255,7 +262,7 @@
         android:layout_width="match_parent"
         android:layout_height="55dp"
         android:fontFamily="@font/dm_sans_medium"
-        android:text="Kembali Ke Beranda"
+        android:text="@string/string_kembali_ke_beranda"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="41dp"
