--- a/app/src/main/res/layout/activity_viewpager.xml
+++ b/app/src/main/res/layout/activity_viewpager.xml
@@ -14,10 +14,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
         android:layout_marginBottom="16dp"
         android:visibility="gone"
-        android:text="Previous"
+        android:text="@string/string_sebelumnya"
         app:layout_constraintBottom_toTopOf="@+id/indicator"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -26,10 +25,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
         android:visibility="gone"
-        android:text="Next"
+        android:text="@string/string_selanjutnya"
         app:layout_constraintBottom_toTopOf="@+id/indicator"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -82,7 +80,7 @@
             android:fontFamily="@font/dm_sans_medium"
             android:layout_marginVertical="10dp"
             android:paddingVertical="10dp"
-            android:text="Masuk"
+            android:text="@string/string_masuk"
             android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
