--- a/app/src/main/res/layout/dialog_katasandi_berhasil.xml
+++ b/app/src/main/res/layout/dialog_katasandi_berhasil.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -14,15 +15,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.172" />
+        app:layout_constraintVertical_bias="0.172"
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@+id/tvKataSandiAnda"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Kata sandi anda berhasil diperbarui"
+        android:text="@string/string_kata_sandi_anda_berhasil_diperbarui"
         android:fontFamily="@font/dm_sans"
-        android:textSize="16dp"
+        android:textSize="16sp"
         android:gravity="center"
         android:textColor="#3A3A3A"
         android:layout_marginVertical="8dp"
@@ -37,7 +39,7 @@
         android:fontFamily="@font/dm_sans_medium"
         android:layout_marginVertical="41dp"
         android:layout_marginHorizontal="24dp"
-        android:text="Masuk Sekarang"
+        android:text="@string/string_masuk_sekarang"
         app:layout_constraintTop_toBottomOf="@+id/tvKataSandiAnda"
         app:layout_constraintStart_toStartOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
