--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -12,7 +12,7 @@
         android:id="@+id/tvTitleRiwayat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Riwayat Transaksi"
+        android:text="@string/string_riwayat_transaksi"
         android:textSize="16sp"
         android:textAlignment="center"
         android:layout_marginVertical="17dp"
@@ -26,7 +26,7 @@
         android:id="@+id/tvDari"
         android:layout_width="164dp"
         android:layout_height="wrap_content"
-        android:text="Awal :"
+        android:text="@string/string_awal"
         android:textSize="18sp"
         android:layout_marginTop="37dp"
         android:layout_marginStart="24dp"
@@ -52,7 +52,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:text="mm/dd/yyyy"
+            android:text="@string/string_mm_dd_yyyy"
             android:textColorHint="@color/warna_auth_font"
             android:textColor="@color/warna_auth_font"
             android:textSize="18sp"
@@ -67,7 +67,8 @@
             android:src="@drawable/ic_baseline_calendar_month_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="ContentDescription" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -75,7 +76,7 @@
         android:id="@+id/tvTujuan"
         android:layout_width="164dp"
         android:layout_height="wrap_content"
-        android:text="Akhir :"
+        android:text="@string/string_akhir"
         android:textSize="18sp"
         android:layout_marginTop="37dp"
         android:textColor="@color/warna_auth_font"
@@ -99,7 +100,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:text="mm/dd/yyyy"
+            android:text="@string/mm_dd_yyyy"
             android:textColorHint="@color/warna_auth_font"
             android:textColor="@color/warna_auth_font"
             android:textSize="18sp"
@@ -114,7 +115,8 @@
             android:src="@drawable/ic_baseline_calendar_month_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="ContentDescription" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -128,7 +130,7 @@
         android:paddingVertical="10dp"
         android:layout_marginVertical="40dp"
         android:layout_marginHorizontal="24dp"
-        android:text="Cari"
+        android:text="@string/string_cari"
         app:layout_constraintTop_toBottomOf="@+id/constDateTujuan"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
