--- a/app/src/main/res/layout/fragment_layanan.xml
+++ b/app/src/main/res/layout/fragment_layanan.xml
@@ -12,7 +12,7 @@
         android:id="@+id/tvTitleLayanan"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Layanan Pengaduan"
+        android:text="@string/string_layanan_pengaduan"
         android:textSize="16sp"
         android:textAlignment="center"
         android:layout_marginVertical="17dp"
@@ -26,7 +26,7 @@
         android:id="@+id/tvSubTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TransEvilz"
+        android:text="@string/string_transevilz"
         android:textSize="30sp"
         android:textAlignment="center"
         android:layout_marginVertical="17dp"
@@ -53,7 +53,8 @@
             android:layout_marginStart="54dp"
             app:layout_constraintTop_toTopOf="@id/constrainLokasi"
             app:layout_constraintStart_toStartOf="@+id/constrainLokasi"
-            android:outlineSpotShadowColor="@color/black">
+            android:outlineSpotShadowColor="@color/black"
+            tools:ignore="UnusedAttribute">
 
             <LinearLayout
                 android:layout_width="60dp"
@@ -68,7 +69,7 @@
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_map"
                     android:gravity="center"
-                    />
+                    tools:ignore="ContentDescription" />
 
             </LinearLayout>
 
@@ -77,7 +78,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Lokasi Kantor"
+            android:text="@string/string_lokasi_kantor"
             android:layout_marginVertical="5dp"
             android:layout_marginStart="40dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -86,7 +87,7 @@
         <TextView
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:text="Jl Raya Pegangsaan Timur No 123, Jakarta Timur, 55990"
+            android:text="@string/string_jl_raya_pegangsaan_timur_no_123_jakarta_timur_55990"
             android:textSize="14sp"
             android:layout_marginVertical="10dp"
             android:fontFamily="@font/dm_sans_medium"
@@ -127,7 +128,8 @@
             android:layout_marginStart="54dp"
             app:layout_constraintTop_toTopOf="@id/constrainEmail"
             app:layout_constraintStart_toStartOf="@+id/constrainEmail"
-            android:outlineSpotShadowColor="@color/black">
+            android:outlineSpotShadowColor="@color/black"
+            tools:ignore="UnusedAttribute">
 
             <LinearLayout
                 android:layout_width="60dp"
@@ -141,7 +143,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_mail"
-                    android:gravity="center"/>
+                    android:gravity="center"
+                    tools:ignore="ContentDescription" />
 
             </LinearLayout>
 
@@ -150,7 +153,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Email"
+            android:text="@string/string_email"
             android:layout_marginVertical="5dp"
             android:layout_marginStart="65dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -159,7 +162,7 @@
         <TextView
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:text="transevilz@evil.id"
+            android:text="@string/string_transevilz_evil_id"
             android:textSize="14sp"
             android:layout_marginVertical="10dp"
             android:fontFamily="@font/dm_sans_medium"
@@ -200,7 +203,8 @@
             android:layout_marginStart="54dp"
             app:layout_constraintTop_toTopOf="@id/constrainWa"
             app:layout_constraintStart_toStartOf="@+id/constrainWa"
-            android:outlineSpotShadowColor="@color/black">
+            android:outlineSpotShadowColor="@color/black"
+            tools:ignore="UnusedAttribute">
 
             <LinearLayout
                 android:layout_width="60dp"
@@ -214,7 +218,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_wa"
-                    android:gravity="center" />
+                    android:gravity="center"
+                    tools:ignore="ContentDescription" />
 
             </LinearLayout>
 
@@ -223,7 +228,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="WhatsApp"
+            android:text="@string/string_whatsapp"
             android:layout_marginVertical="5dp"
             android:layout_marginStart="50dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -232,7 +237,7 @@
         <TextView
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:text="WA Bisnis"
+            android:text="@string/string_wa_bisnis"
             android:textSize="14sp"
             android:layout_marginVertical="10dp"
             android:fontFamily="@font/dm_sans_medium"
@@ -273,7 +278,8 @@
             android:layout_marginStart="54dp"
             app:layout_constraintTop_toTopOf="@id/constrainCall"
             app:layout_constraintStart_toStartOf="@+id/constrainCall"
-            android:outlineSpotShadowColor="@color/black">
+            android:outlineSpotShadowColor="@color/black"
+            tools:ignore="UnusedAttribute">
 
             <LinearLayout
                 android:layout_width="60dp"
@@ -287,7 +293,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_phone"
-                    android:gravity="center"/>
+                    android:gravity="center"
+                    tools:ignore="ContentDescription" />
 
             </LinearLayout>
 
@@ -296,7 +303,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Call Center"
+            android:text="@string/string_kontak_admin"
             android:layout_marginVertical="5dp"
             android:layout_marginStart="50dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -305,7 +312,7 @@
         <TextView
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:text="+62 1234 5678 9101"
+            android:text="@string/string_62_1234_5678_9101"
             android:textSize="14sp"
             android:layout_marginVertical="10dp"
             android:fontFamily="@font/dm_sans_medium"
@@ -334,7 +341,7 @@
         android:layout_width="290dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/dm_sans_medium"
-        android:text="Untuk keperluan yang lebih lanjut silakan datang langsung ke kantor"
+        android:text="@string/string_untuk_keperluan_yang_lebih_lanjut_silakan_datang_langsung_ke_kantor"
         android:textColor="@color/warna_secondary_font"
         android:textSize="12sp"
         android:layout_marginVertical="33dp"
