--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -12,7 +12,7 @@
         android:id="@+id/tvTittle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Akun Saya"
+        android:text="@string/string_akun_saya"
         android:textSize="16sp"
         android:textAlignment="center"
         android:layout_marginVertical="17dp"
@@ -46,7 +46,7 @@
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_marginVertical="20dp"
-                android:src="@drawable/ic_launcher_background"
+                android:src="@drawable/ic_pic_empty"
                 app:layout_constraintTop_toTopOf="@+id/constrainProfile"
                 app:layout_constraintStart_toStartOf="@+id/constrainProfile"
                 app:layout_constraintEnd_toEndOf="@+id/constrainProfile"/>
@@ -64,7 +64,8 @@
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:layout_gravity="center"
-                    android:src="@drawable/ic_baseline_camera_alt_24"/>
+                    android:src="@drawable/ic_baseline_camera_alt_24"
+                    tools:ignore="ContentDescription" />
 
             </androidx.cardview.widget.CardView>
 
@@ -72,7 +73,7 @@
                 android:id="@+id/tvNamaUser"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Dinda Salsabila"
+                android:text="@string/string_username"
                 android:textSize="18sp"
                 android:layout_marginTop="18dp"
                 android:fontFamily="@font/dm_sans_medium"
@@ -88,7 +89,8 @@
                 android:layout_marginTop="23dp"
                 android:layout_marginStart="10dp"
                 app:layout_constraintTop_toBottomOf="@+id/ivSetImage"
-                app:layout_constraintStart_toEndOf="@+id/tvNamaUser"/>
+                app:layout_constraintStart_toEndOf="@+id/tvNamaUser"
+                tools:ignore="ContentDescription" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -107,7 +109,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/dm_sans_medium"
-            android:text="Bahasa"
+            android:text="@string/string_bahasa"
             android:textColor="@color/warna_auth_font"
             android:layout_marginStart="25dp"
             android:textSize="18sp"
@@ -154,7 +156,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/dm_sans_medium"
-            android:text="Izin Aplikasi"
+            android:text="@string/string_izin_aplikasi"
             android:textColor="@color/warna_auth_font"
             android:layout_marginStart="25dp"
             android:textSize="18sp"
@@ -216,7 +218,8 @@
             android:src="@drawable/ic_baseline_arrow_forward_ios_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/constrainSyarat"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="ContentDescription" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
     <!--  Divider  -->
@@ -239,19 +242,21 @@
         android:gravity="center"
         android:layout_marginVertical="29dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dividerViewTiga">
+        app:layout_constraintTop_toBottomOf="@+id/dividerViewTiga"
+        tools:ignore="UseCompoundDrawables">
 
         <ImageView
             android:id="@+id/ivLogout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_logout"/>
+            android:src="@drawable/ic_logout"
+            tools:ignore="ContentDescription" />
 
         <TextView
             android:id="@+id/tvLogout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Logout"
+            android:text="@string/string_keluar"
             android:textColor="@color/warning_font"
             android:textSize="16sp"
             android:layout_marginStart="15dp"
