--- a/app/src/main/res/layout/item_codepicker.xml
+++ b/app/src/main/res/layout/item_codepicker.xml
@@ -15,13 +15,14 @@
         android:src="@drawable/ic_launcher_background"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@+id/tvCodeCountry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Dummy Code"
+        android:text="@string/string_dummy_code"
         android:visibility="gone"
         app:layout_constraintStart_toEndOf="@+id/ivCodepicker"
         app:layout_constraintTop_toTopOf="parent"
