--- a/app/src/main/res/layout/item_dummy_currency.xml
+++ b/app/src/main/res/layout/item_dummy_currency.xml
@@ -49,7 +49,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginVertical="5dp"
                 android:fontFamily="@font/poppins_bold"
-                android:text="Nama User"
+                android:text="@string/string_nama_user"
                 android:textSize="12sp"
                 app:layout_constraintStart_toEndOf="@id/ivAvatar"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -59,7 +59,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/dm_sans_medium"
-                android:text="Rp. 1000.000"
+                android:text="@string/string_rp_1000_000"
                 android:textColor="@color/warna_auth_font"
                 android:textSize="14sp"
                 app:layout_constraintStart_toStartOf="@id/tvCodeCountry"
@@ -71,7 +71,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/dm_sans_medium"
                 android:textColor="@color/warna_verifikasi_font"
-                android:text="+0,20%"
+                android:text="@string/string_0_20"
                 android:textSize="14sp"
                 android:layout_marginStart="5dp"
                 app:layout_constraintStart_toEndOf="@+id/tvTotal"
