--- a/app/src/main/res/layout/item_dummy_history.xml
+++ b/app/src/main/res/layout/item_dummy_history.xml
@@ -46,7 +46,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginVertical="5dp"
                 android:fontFamily="@font/poppins_bold"
-                android:text="Nama User"
+                android:text="@string/string_nama_user"
                 android:textSize="12sp"
                 app:layout_constraintStart_toEndOf="@id/ivAvatar"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -56,7 +56,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/dm_sans_medium"
-                android:text="BCC-12341234"
+                android:text="@string/string_bcc_12341234"
                 android:textSize="12sp"
                 app:layout_constraintStart_toStartOf="@id/tvCodeCountry"
                 app:layout_constraintTop_toBottomOf="@id/tvCodeCountry" />
@@ -66,7 +66,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/dm_sans_bold"
-                android:text="Rp. 1000.000"
+                android:text="@string/string_rp_1000_000"
                 android:textColor="@color/warna_button"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="@id/tvCodeCountry"
