--- a/app/src/main/res/layout/item_history.xml
+++ b/app/src/main/res/layout/item_history.xml
@@ -34,7 +34,7 @@
             android:id="@+id/tvName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Nama User"
+            android:text="@string/string_nama_user"
             android:textSize="25sp"
             android:fontFamily="@font/poppins_bold"
             android:layout_marginVertical="9dp"
@@ -46,7 +46,7 @@
             android:id="@+id/tvCodeBank"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Bank Of Amrika"
+            android:text="@string/string_bank_amerika"
             android:textSize="12sp"
             android:fontFamily="@font/dm_sans_medium"
             app:layout_constraintTop_toBottomOf="@id/tvName"
@@ -56,7 +56,7 @@
             android:id="@+id/tvNoRekening"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="10100110"
+            android:text="@string/string_10100110"
             android:textSize="12sp"
             android:fontFamily="@font/dm_sans_medium"
             app:layout_constraintStart_toStartOf="@id/tvName"
@@ -66,7 +66,7 @@
             android:id="@+id/tvId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Id"
+            android:text="@string/string_id"
             android:textSize="12sp"
             android:fontFamily="@font/dm_sans_medium"
             app:layout_constraintStart_toStartOf="@id/tvName"
@@ -76,7 +76,7 @@
             android:id="@+id/tvTotal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="10100110"
+            android:text="@string/string_10100110"
             android:textSize="16sp"
             android:fontFamily="@font/dm_sans_medium"
             app:layout_constraintEnd_toEndOf="@+id/csUserHistoy"
@@ -86,7 +86,7 @@
             android:id="@+id/tvTipeTransaksi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="10100110"
+            android:text="@string/string_10100110"
             android:textSize="16sp"
             android:fontFamily="@font/dm_sans_medium"
             app:layout_constraintEnd_toEndOf="@+id/csUserHistoy"
