--- a/app/src/main/res/layout/loading_item.xml
+++ b/app/src/main/res/layout/loading_item.xml
@@ -32,7 +32,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Loading...!!"
+        android:text="@string/string_loading"
         android:textColor="@color/white"
         android:textSize="19sp"
         android:textStyle="bold"
