--- a/app/src/main/res/layout/pop_up_aktivasi_akun.xml
+++ b/app/src/main/res/layout/pop_up_aktivasi_akun.xml
@@ -24,7 +24,7 @@
         android:id="@+id/tvKataSandi"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:text="Email or password invalid"
+        android:text="@string/string_email_atau_password_salah"
         android:textAlignment="center"
         android:textSize="25sp"
         android:fontFamily="@font/dm_sans_bold"
@@ -40,7 +40,7 @@
         android:id="@+id/btnCobaNanti"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Coba Lagi"
+        android:text="@string/string_coba_lagi"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:layout_marginVertical="35dp"
