--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -33,6 +33,15 @@
         <item name="textAllCaps">false</item>
     </style>
 
+    <style name="cancelbutton">
+        <item name="backgroundTint">@color/warning_font</item>
+        <item name="android:textSize">18sp</item>
+        <item name="cornerRadius">10dp</item>
+        <item name="android:state_pressed">false</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="textAllCaps">false</item>
+    </style>
+
     <style name="secondbutton">
         <item name="backgroundTint">@color/white</item>
         <item name="android:width">4dp</item>
